// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component should render ListItem correctly 1`] = `
<ListItem>
  <li
    className="ListItem"
    role="presentation"
  >
    <Text
      key=".0"
    >
      <p>
        An item
      </p>
    </Text>
  </li>
</ListItem>
`;

exports[`ListItem component should render correctly when disabled 1`] = `
<ListItem
  disabled={true}
>
  <li
    className="ListItem ListItem--disabled"
    role="presentation"
  >
    <Text
      inline={true}
      key=".0"
    >
      <span>
        An item
      </span>
    </Text>
  </li>
</ListItem>
`;
